...
          </Text>
          <Text variant="bodyRelaxed" color="textMuted" marginTop="s9" marginBottom="s20">
            {confirm.text}
          </Text>

          <Button
            testID="confirm-dialog-accept"
            title={confirm.buttonLabel}
            onPress={() => {
              const action = confirm.onConfirm;
              close();
              action();
            }}
...
